// Dynamic data entries of a provider.
syntax = "proto3";

package androidx.wear.protolayout.expression.proto;

import "fixed.proto";

option java_package = "androidx.wear.protolayout.expression.proto";
option java_outer_classname = "DynamicDataProto";

// A dynamic data value.
message DynamicDataValue {
  oneof inner {
    FixedString string_val = 1;
    FixedInt32 int32_val = 2;
    FixedFloat float_val = 3;
    FixedBool bool_val = 4;
    FixedColor color_val = 5;
    FixedInstant instant_val = 6;
    FixedDuration duration_val = 7;
  }
}
